# mazes

./: README.md  Taskfile.yaml  pyproject.toml
mazes/: primitives.py
mazes/algorithms/: __init__.py  binary_tree.py  sidewalker.py
tests/: test_basic_grid.py  test_binary_tree.py  test_sidewalker.py
