[tool.poetry]
name = "mazes"
version = "0.1.0"
description = ""
authors = ["Oren Mazor <oren.mazor@agilebits.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.0"
isort = "^5.11.3"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
